test controller and fix for sonar